2010-02-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-get-and-render-timeline): ignore
	non-interactive request if a process is waiting for responses.

2010-02-05  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-update-status-from-pop-up-buffer):
	Use the current hashtag if set; same as
	`twittering-update-status-from-minibuffer'.

2010-02-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-status-to-status-datum): assign a
	retweet the ID issued when it is retweeted. `source-id', which is
	the ID of the original tweet, is also assigned to the retweet.
	(twittering-cache-status-datum): do not register multiple retweets
	referring the same tweet.

	* twittering-mode.el (twittering-http-get-default-sentinel): make
	a hash table for already retrieved IDs.
	(twittering-cache-status-datum): use a hash table of IDs to avoid
	registering redundant tweets.

	* twittering-mode.el (twittering-status-to-status-datum): fix
	lacked binding of `source-id' and `source-created-at'.

	* twittering-mode.el (twittering-cache-status-datum): register IDs
	with ID-TABLE when a tweet is added to DATA-VAR. This prevents
	duplicated tweets in one retrieval from being registered.

2010-02-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-get-default-sentinel): sort
	`twittering-timeline-data' by ID.

2010-02-03  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-status-to-status-datum): Don't
	rewrite `created-at' by a same name element in `retweeted_status'
	node.

2010-01-31  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-get-default-sentinel):
	rearranged.

	* twittering-mode.el (twittering-start-http-ssl-session): return
	the process object.
	(twittering-start-http-non-ssl-session): likewise.
	(twittering-get-tweets): likewise.

	* twittering-mode.el (twittering-process-info-alist): new variable